--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-cookie": "^8.0.1",
