--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
+    "process": "^0.11.10",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.1"
   }
