--- a/Server/package.json
+++ b/Server/package.json
@@ -10,12 +10,14 @@
   "author": "Himanshu Bidwaik",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "react": "^19.1.0",
