feat: Implement user profile update functionality and enhance email verification process
- Added UpdateInformation component for updating user profile details.
- Integrated email validation during registration and profile updates.
- Enhanced OTP verification to handle encrypted email addresses.
- Removed unused UploadImage component and refactored related code.
- Improved password strength checker with customizable labels.
- Updated routing to include new update information page.
- Added utility function to fetch and decrypt user profile data.
- Modified ActivityLog component to display formatted dates.
- Added reset password link in the login component.

--- a/Server/package.json
+++ b/Server/package.json
@@ -10,9 +10,11 @@
   "author": "Himanshu Bidwaik",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
