feat: integrate socket.io for user session management and implement logout functionality for unverified users
- Added socket.io server setup in app.js to handle real-time user status updates.
- Implemented LogoutIfUnVerified controller to check user verification status and handle logout.
- Updated user routes to include logoutIfUnverified endpoint.
- Enhanced userController.js with new LogoutIfUnVerified function.
- Modified userRoute.js to route logoutIfUnverified requests.
- Updated frontend components (App.jsx, Home.jsx, Navbar.jsx) to establish socket connections and handle logout events.
- Added socket.io-client dependency to frontend for real-time communication.
- Updated package.json and package-lock.json for both server and frontend to include socket.io and socket.io-client.

--- a/Server/package.json
+++ b/Server/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "react": "^19.1.0",
-    "react-cookie": "^8.0.1"
+    "react-cookie": "^8.0.1",
+    "socket.io": "^4.8.1"
   }
 }
